# rust-hn

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.BASE  LICENSE  compose.yaml  manage.py  readme.md
.sqlx/: query-0c8ed530fd47fa5f65356739f7108ebe1e7129595fc03bc9fbd31fabf928bf96.json  query-0dda3a859511dc79977d968846c829016d2cf71b80130949aa8f966981a1b4a1.json  query-2056501557b9f3947e0414edd5563b27a5cceea6be44b5016c45be764b3afec4.json  query-296521376191af96d8ff8610f25099370d61f9870b6f035da654be2166d559a9.json  query-3d9ac7635b156dfc3fa5b7cd2649fbb07d22921227bd6457ee6064ec867b6ef9.json  query-416d1381cd42ef3ec3fee62679a448eff68f0a8ad8fad581ef89b0f957fded9b.json  query-5ee63c8d73dfd63e2c5d8c457eac0f2071f912ff4311a35c7c6574bbde75d0a9.json  query-69c24230e19d28ad292ac03c5ced599b1d86222971a5cc3c434b61db0210cf1e.json  query-791d6bfd5949a6e62565dd07bda407da805acbd39b7d87d671bbe1ee68752db3.json  query-83df8745ab1125a68dde6b94565e02788547446c8fb246926512a60c13802b71.json  query-893e4c6395fa7a62dac00de0d5be89522a87e6c2e7e681293a57487cab153c2a.json  query-9557cafc25a8a0eb95c0c472c1007ee707c5acd49da1e112aa2bea7c9021845a.json  query-a8e76a66663e7e1e3ffea62373950881d2a6dd3841c4f7f2a55c562ce2b524b6.json  query-cbe647e3237a2f87859e80748a4b8ea732ff5c823f26cba84b857bd6d90d8030.json  query-d45f2f4c35beca29a3b187d0f4eb0c59fe881438ef114cd9cb984cd49f4c4e23.json
assets/: script.js  style.css
front/: index.html  login.html  style.css  submit.html
migrations/: 20241210075200_init.sql  20241210081254_sample.sql  20241211091437_init.sql  20241217085830_cascade.sql  20241218081243_add_chat_table.sql
src/: jwt.rs  main.rs
src/cli/: mod.rs
src/db/: mod.rs  models.rs  postgres.rs
src/server/: jsonrpc.rs  mod.rs  rest.rs
src/server/rest_services/: comment.rs  get_chat_messages.rs  get_user_chats.rs  index.rs  item.rs  login.rs  logout.rs  mod.rs  profile.rs  remove.rs  (+6 more)
src/templates/: comment.html  index.html  item.html  login.html  profile.html  script.js  style.css  submit.html  template.html
(+3 files in other folders)
