[package]
name = "satoshifamily"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "time"] }
structopt = "0.3.26"
tokio = { version = "1.42.0", features = ["full"] }
jsonrpsee = { version = "0.24.3", features = [
    "server",
    "http-client",
    "ws-client",
    "macros",
    "client-ws-transport-tls",
] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tower_http_cors = { package = "tower-http", version = "0.4.4", features = ["full"] }
axum = "0.7.9"
